src/test/deca/context/valid/created/exp_bin/op_arith/mult.deca
// Description :
//    test de la multiplication
//
// Resultats :
//		Ok

{
int a;
float b;
a = 1 * 2; //a = 2
a = 2 * a; //a = 4
b = 0.5 * 2; //b = 1.0
b = 2.0 * 3.0; //b = 6.0
b = 2 * 2.5; //b = 5.0
b = a * b; //b = 20.0
b = b * (a * 2); //b = 160.0
b = (0.5 * b) * 0.5; //b = 40.0
a = a * a; //a = 16
}

