src/test/deca/context/invalid/created/binary_exp/op_arith/modulo_float_int.deca
// Description :
//    test modulo entre un float et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type float. Or les opérandes d’un modulo doivent être de type ‘int’

{
float a;
int b;
int c = a % b;
}